--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,5 +4,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: end;
+  align-items: flex-end;
+  padding: 28px 48px 0;
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .header {
+    padding: 28px 24px 0;
+  }
 }
