--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,11 +1,21 @@
 .cover__subtitle {
-  text-align: center;
-  margin: 0 auto;
-  padding: 0;
+  position: relative;
+  margin: 0;
+  max-width: 360px;
   font-family: 'Inter', sans-serif;
   font-size: 18px;
   font-weight: 400;
-  line-height: 22px;
-  max-width: 360px;
+  text-align: center;
+  line-height: 1.2;
   margin-top: 32px;
+  z-index: 11;
+}
+
+
+@media screen and (max-width: 767px) {
+  .cover__subtitle {
+    font-size: 14px;
+    max-width: 288px;
+    margin-top: 16px;
+  }
 }
