--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,11 +1,21 @@
 .cover__title {
-  text-align: center;
-  margin: 0 auto;
-  padding: 0;
+  position: relative;
+  margin: 0;
+  max-width: 560px;
   font-family: 'Inter', sans-serif;
   font-size: 72px;
   font-weight: 900;
-  line-height: 76px;
-  max-width: 560px;
-  padding-top: 245px;
+  text-align: center;
+  line-height: 1.05;
+  z-index: 10;
+}
+
+
+
+
+@media screen and (max-width: 767px) {
+  .cover__title {
+    font-size: 32px;
+    max-width: 288px;
+  }
 }
