--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,25 @@
 .footer {
-  margin: 92px auto 24px;
+  padding: 92px 48px 24px;
   max-width: 1184px;
   display: flex;
   justify-content: space-between;
+}
+
+
+
+
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .footer {
+    padding: 88px 24px 24px;
+  }
+}
+
+
+@media screen and (max-width: 767px) {
+  .footer {
+    flex-direction: column;
+
+    padding: 88px 24px 24px;
+  }
 }
