--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,3 +1,14 @@
 .header__lang-link {
+  margin: 0;
+  padding: 0;
+  font-family: 'Inter', sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 1.16;
   margin-left: 18px;
+  color: white;
+  text-decoration: none;
 }
+
+
+
