--- a/blocks/intro/__item/intro__item.css
+++ b/blocks/intro/__item/intro__item.css
@@ -4,6 +4,6 @@
   font-family: 'Inter', sans-serif;
   font-size: 12px;
   font-weight: 700;
-  line-height: 18px;
+  line-height: 1.5;
   max-width: 780px;
 }
