--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,7 +4,7 @@
   font-family: 'Inter', sans-serif;
   font-size: 16px;
   font-weight: 400;
-  line-height: 26px;
-  max-width: 780px;
+  line-height: 1.6;
+  max-width: 690px;
   margin-top: 40px;
 }
