--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,8 +2,17 @@
   margin: 0;
   padding: 0;
   font-family: 'Inter', sans-serif;
+  font-style: normal;
   font-size: 54px;
   font-weight: 900;
-  line-height: 58px;
-  max-width: 780px;
+  line-height: 1.07;
+  max-width: 678px;
+}
+
+
+@media screen and (max-width: 767px) {
+  .intro__title {
+    font-size: 32px;
+    min-width: 288px;
+  }
 }
