--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,3 +2,26 @@
   margin: 92px auto 0;
   max-width: 984px;
 }
+
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .intro {
+    max-width: 928px;
+  }
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .intro {
+    margin: 88px 24px 0;
+    max-width: 720px;
+  }
+}
+
+
+@media screen and (max-width: 767px) {
+  .intro {
+    margin: 64px 16px 0;
+    max-width: 720px;
+  }
+}
