--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,10 +4,24 @@
   font-style:  normal;
   font-weight: 400;
   font-size: 10px;
-  line-height: 14px;
+  line-height: 1.4;
   text-transform: uppercase;
   letter-spacing: 1.5px;
-
   align-self: start;
   margin-top: 8px;
 }
+
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .lead__caption {
+    padding-left: 24px;
+  }
+}
+
+
+@media screen and (max-width: 767px) {
+  .lead__caption {
+    padding-left: 16px;
+  }
+}
+
