--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,10 @@
 .lead__image {
-  max-width: 984px;
-  max-height: 615px;
+  max-width: 100%;
   margin-top: 64px;
+}
+
+@media screen and (max-width: 767px) {
+  .lead__image {
+    margin-top: 40px;
+  }
 }
