--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -4,8 +4,17 @@
   font-style:  normal;
   font-weight: 400;
   font-size: 30px;
-  line-height: 36px;
+  line-height: 1.2;
   text-align: center;
   width: 640px;
-  margin-top: 32px;
+  margin-top: 16px;
 }
+
+
+@media screen and (max-width: 767px){
+  .lead__subtitle {
+    font-size: 16px;
+    max-width: 288px;
+  }
+}
+
