--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,6 +5,16 @@
   font-size: 96px;
   font-weight: 900;
   text-align: center;
-  line-height: 100px;
-  width: 720px;
+  line-height: 1.04;
+  max-width: 720px;
 }
+
+
+@media screen and (max-width: 767px){
+  .lead__title {
+    font-size: 40px;
+    max-width: 288px;
+  }
+}
+
+
