--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,17 @@
 .page {
-  padding-top: 28px;
-  color: #FFFFFF;
+  background-color: #2a2c2f;
+  font-family: "Inter", Arial, sans-serif;
+  margin: 0 auto;
+  max-width: 1280px;
+  min-width: 320px;
+  width: 100%;
+  color: white;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
+
+
