--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,6 +2,35 @@
   margin: 92px auto 0;
   max-width: 1184px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 284px);
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+  grid-template-rows: 1fr;
   gap: 16px;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .photo-grid {
+    max-width: 928px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 14px;
+  }
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .photo-grid {
+    max-width: 720px;
+    grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
+    gap: 16px;
+  }
+}
+
+
+@media screen and (max-width: 767px) {
+  .photo-grid {
+    margin: 64px 16px 0;
+    gap: 12px;
+    min-width: 288px;
+    grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
+
+  }
 }
