--- a/blocks/places-list/__link/places-list__link.css
+++ b/blocks/places-list/__link/places-list__link.css
@@ -5,7 +5,15 @@
   font-family: 'Inter', sans-serif;
   font-size: 18px;
   font-weight: 400;
-  line-height: 22px;
+  line-height: 1.2;
   max-width: 460px;
+  opacity: 1;
   color: white;
+  transition-property: opacity;
+  transition-duration: 0.4s;
+  transition-timing-function: linear;
+}
+
+.places-list__link:hover {
+  opacity: 0.8;
 }
