--- a/blocks/places-list/__paragraph/places-list__paragraph.css
+++ b/blocks/places-list/__paragraph/places-list__paragraph.css
@@ -4,7 +4,32 @@
   font-family: 'Inter', sans-serif;
   font-size: 18px;
   font-weight: 400;
-  line-height: 29.34px;
-  max-width: 484px;
+  line-height: 1.6;
   margin-bottom: 26px;
+  max-width: 484px;
+
 }
+
+
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .places-list__paragraph {
+    max-width: 456px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .places-list__paragraph {
+    font-size: 16px;
+    max-width: 352px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .places-list__paragraph {
+    font-size: 16px;
+    min-width: 288px;
+  }
+}
+
+
