--- a/blocks/places-list/__title/places-list__title.css
+++ b/blocks/places-list/__title/places-list__title.css
@@ -4,6 +4,21 @@
   font-family: 'Inter', sans-serif;
   font-size: 72px;
   font-weight: 900;
-  line-height: 76px;
+  line-height: 1.05;
   max-width: 460px;
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .places-list__title {
+    font-size: 42px;
+  }
+}
+
+
+@media screen and (max-width: 767px) {
+  .places-list__title {
+    font-size: 32px;
+    padding: 0 16px 0;
+  }
 }
