--- a/blocks/places-list/__url-heading/places-list__url-heading.css
+++ b/blocks/places-list/__url-heading/places-list__url-heading.css
@@ -5,7 +5,7 @@
   font-family: 'Inter', sans-serif;
   font-size: 12px;
   font-weight: 400;
-  line-height: 12px;
+  line-height: 1;
   max-width: 460px;
   letter-spacing: 2px;
   margin-bottom: 12px;
