--- a/blocks/places-list/__website/places-list__website.css
+++ b/blocks/places-list/__website/places-list__website.css
@@ -3,3 +3,12 @@
   grid-column: 2/ 3;
   align-self: end;
 }
+
+
+@media screen and (max-width: 767px) {
+  .places-list__website {
+    grid-row: 2 / 3;
+    grid-column: 1;
+    padding: 0 16px 0;
+  }
+}
