--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,3 +2,26 @@
   margin: 92px auto 0;
   max-width: 984px;
 }
+
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .places {
+    max-width: 928px;
+  }
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .places {
+    margin-top: 88px;
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .places {
+    margin-top: 64px;
+    max-width: 320px;
+  }
+}
+
