--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,17 @@
-
-
 @import url('../vendor/normalize.css');
+@import url('../vendor/fonts/font-Inter.css');
 
 @import url('../blocks/page/page.css');
 
 @import url('../blocks/header/header.css');
+@import url('../blocks/header/__langs/header__langs.css');
 @import url('../blocks/header/__lang-link/header__lang-link.css');
+@import url('../blocks/header/__lang-link/_active/header__lang-link_active.css');
+@import url('../blocks/header/__logo/header__logo.css');
+
+
+@import url('../blocks/content/content.css');
+
 
 @import url('../blocks/lead/lead.css');
 @import url('../blocks/lead/__image/lead__image.css');
@@ -32,14 +38,14 @@
 @import url('../blocks/places-list/__title/places-list__title.css');
 @import url('../blocks/places-list/__place/places-list__place.css');
 @import url('../blocks/places-list/__paragraph/places-list__paragraph.css');
+@import url('../blocks/places-list/__paragraphs/places-list__paragraphs.css');
 @import url('../blocks/places-list/__link/places-list__link.css');
 @import url('../blocks/places-list/__image/places-list__image.css');
 
 @import url('../blocks/cover/cover.css');
 @import url('../blocks/cover/__title/cover__title.css');
 @import url('../blocks/cover/__subtitle/cover__subtitle.css');
-@import url('../blocks/cover/__overlay/cover__overlay.css');
-@import url('../blocks/cover/__background/cover__background.css');
+@import url('../blocks/cover/__link/cover__link.css');
 
 
 @import url('../blocks/footer/footer.css');
