--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -3,4 +3,9 @@
   padding: 0;
   margin: 0;
   margin-top: 33px;
+  font-family: 'Inter', sans-serif;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 1.5;
+  max-width: 780px;
 }
