--- a/blocks/places-list/__title/places-list__title.css
+++ b/blocks/places-list/__title/places-list__title.css
@@ -4,7 +4,7 @@
   font-family: 'Inter', sans-serif;
   font-size: 72px;
   font-weight: 900;
-  line-height: 1.05;
+  line-height: 76px;
   max-width: 460px;
 }
 
@@ -12,6 +12,7 @@
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .places-list__title {
     font-size: 42px;
+    line-height: 46px;
   }
 }
 
@@ -19,6 +20,7 @@
 @media screen and (max-width: 767px) {
   .places-list__title {
     font-size: 32px;
+    line-height: 35px;
     padding: 0 16px 0;
   }
 }
