--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,12 +1,11 @@
 .cover__subtitle {
-  position: relative;
   margin: 0;
   max-width: 360px;
   font-family: 'Inter', sans-serif;
   font-size: 18px;
   font-weight: 400;
   text-align: center;
-  line-height: 1.2;
+  line-height: 22px;
   margin-top: 32px;
   z-index: 11;
 }
@@ -15,6 +14,7 @@
 @media screen and (max-width: 767px) {
   .cover__subtitle {
     font-size: 14px;
+    line-height: 16px;
     max-width: 288px;
     margin-top: 16px;
   }
