--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,12 +1,11 @@
 .cover__title {
-  position: relative;
   margin: 0;
   max-width: 560px;
   font-family: 'Inter', sans-serif;
   font-size: 72px;
   font-weight: 900;
   text-align: center;
-  line-height: 1.05;
+  line-height: 76px;
   z-index: 10;
 }
 
@@ -16,6 +15,7 @@
 @media screen and (max-width: 767px) {
   .cover__title {
     font-size: 32px;
+    line-height: 35px;
     max-width: 288px;
   }
 }
