--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -3,3 +3,17 @@
   width: 100%;
   position: relative;
 }
+
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .cover {
+    margin: 90px auto 0;
+  }
+}
+
+
+@media screen and (max-width: 767px) {
+  .cover {
+    margin: 66px auto 0;
+  }
+}
