--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,5 +4,12 @@
   font-family: 'Inter', sans-serif;
   font-size: 14px;
   font-weight: 400;
-  line-height: 1.14;
+  line-height: 16px;
+}
+
+
+@media screen and (max-width: 767px) {
+  .footer__copyright {
+    line-height: 14px;
+  }
 }
