--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,11 +4,28 @@
   font-family: 'Inter', sans-serif;
   font-size: 24px;
   font-weight: 400;
-  line-height: 1.16;
+  line-height: 28px;
   margin-left: 18px;
   color: white;
   text-decoration: none;
+  transition-property: opacity;
+  transition-duration: 0.4s;
+  transition-timing-function: linear;
+}
+
+.header__lang-link:hover {
+  opacity: 0.8;
 }
 
 
+.header__lang-link:first-of-type {
+  margin-left: 0;
+}
 
+
+@media screen and (max-width: 767px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
+  }
+}
