--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,9 +2,8 @@
   max-width: 1184px;
   margin: 0 auto;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   padding: 28px 48px 0;
 }
 
@@ -12,5 +11,12 @@
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .header {
     padding: 28px 24px 0;
+  }
+}
+
+
+@media screen and (max-width: 767px) {
+  .header {
+    padding: 16px 16px 0;
   }
 }
