--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -6,6 +6,6 @@
   font-family: 'Inter', sans-serif;
   font-size: 12px;
   font-weight: 700;
-  line-height: 1.5;
+  line-height: 18px;
   max-width: 780px;
 }
