--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,7 +4,7 @@
   font-style:  normal;
   font-weight: 400;
   font-size: 10px;
-  line-height: 1.4;
+  line-height: 14px;
   text-transform: uppercase;
   letter-spacing: 1.5px;
   align-self: start;
