--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -4,17 +4,19 @@
   font-style:  normal;
   font-weight: 400;
   font-size: 30px;
-  line-height: 1.2;
+  line-height: 36px;
   text-align: center;
   width: 640px;
-  margin-top: 16px;
+  margin-top: 32px;
 }
 
 
 @media screen and (max-width: 767px){
   .lead__subtitle {
     font-size: 16px;
+    line-height: 20px;
     max-width: 288px;
+    margin-top: 16px;
   }
 }
 
