--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,14 +5,15 @@
   font-size: 96px;
   font-weight: 900;
   text-align: center;
-  line-height: 1.04;
+  line-height: 100px;
   max-width: 720px;
 }
 
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 767px) {
   .lead__title {
     font-size: 40px;
+    line-height: 44px;
     max-width: 288px;
   }
 }
