--- a/blocks/menu/__link/menu__link.css
+++ b/blocks/menu/__link/menu__link.css
@@ -4,7 +4,7 @@
   font-family: 'Inter', sans-serif;
   font-size: 16px;
   font-weight: 400;
-  line-height: 1.1;
+  line-height: 18px;
   text-decoration: none;
   color: white;
   margin-right: 18px;
@@ -24,6 +24,7 @@
 @media screen and (max-width: 767px) {
   .menu__link {
     font-size: 24px;
+    line-height: 24px;
     margin-bottom: 32px;
   }
 
