--- a/blocks/places-list/__link/places-list__link.css
+++ b/blocks/places-list/__link/places-list__link.css
@@ -5,7 +5,7 @@
   font-family: 'Inter', sans-serif;
   font-size: 18px;
   font-weight: 400;
-  line-height: 1.2;
+  line-height: 22px;
   max-width: 460px;
   opacity: 1;
   color: white;
