--- a/blocks/places-list/__paragraph/places-list__paragraph.css
+++ b/blocks/places-list/__paragraph/places-list__paragraph.css
@@ -4,12 +4,15 @@
   font-family: 'Inter', sans-serif;
   font-size: 18px;
   font-weight: 400;
-  line-height: 1.6;
+  line-height: 163%;
   margin-bottom: 26px;
   max-width: 484px;
 
 }
 
+.places-list__paragraph:last-of-type {
+  margin-bottom: 0;
+}
 
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
