--- a/blocks/places-list/__place/places-list__place.css
+++ b/blocks/places-list/__place/places-list__place.css
@@ -1,12 +1,9 @@
 .places-list__place {
-  max-width: 984px;
   display: grid;
-  grid-template-columns: minmax(340px, 460px) minmax(352px, 484px);
-  grid-template-rows: repeat(2, auto);
+  grid-template-columns: 460px 1fr;
   row-gap: 48px;
   column-gap: 40px;
   margin-bottom: 80px;
-  width: 100%;
 }
 
 .places-list__place:last-of-type {
@@ -16,16 +13,16 @@
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .places-list__place {
-    max-width: 928px;
     row-gap: 48px;
     column-gap: 32px;
+    grid-template-columns: 440px 1fr;
   }
 }
 
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .places-list__place {
-    max-width: 720px;
+    grid-template-columns: 340px 1fr;
     row-gap: 48px;
     column-gap: 28px;
     margin-bottom: 73px;
@@ -36,8 +33,6 @@
 @media screen and (max-width: 767px) {
   .places-list__place {
     row-gap: 32px;
-    max-width: 320px;
-    display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, minmax(min-content, max-content));
     margin-bottom: 50px;
