--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,17 +3,15 @@
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: end;
   padding: 28px 48px 0;
 }
-
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .header {
     padding: 28px 24px 0;
   }
 }
-
 
 @media screen and (max-width: 767px) {
   .header {
