--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -9,11 +9,10 @@
   max-width: 678px;
 }
 
-
 @media screen and (max-width: 767px) {
   .intro__title {
     font-size: 32px;
-    list-style: 35px;
+    line-height: 35px;
     min-width: 288px;
   }
 }
